[package]
name = "lab_8_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fft2d = "0.1.1"
image = "0.24.1"
rustfft = {version="6.1.0", features = ["default"]}
show-image = "0.13.1"
rusttype = "0.9.3"
#show-image = "0.13.1"
#fontconfig = "0.7.0"